@@ -30,6 +30,7 @@
   (MySQL bug #59989, Oracle bug #11776346)
 - small but important improvements in EF sql generation
 - added batching support for updates and deletes (bug #59616)
+- modified schema1.sql in MySql.Web to remove ENGINE declaration on table creation (Oracle bug #12311974).
 
 Version 6.0.7
 - Fix authorization popup after modifying stored procedure in VS (Bug #44715)
